Use Heroku config to enable ctf mode

--- a/app.json
+++ b/app.json
@@ -16,5 +16,11 @@
     "vulnerability",
     "broken",
     "bodgeit"
-  ]
+  ],
+  "env": {
+    "NODE_ENV": {
+      "description": "Use 'ctf' to enable CTF mode",
+      "value": "ctf"
+    }
+  }
 }
